src/snapshots/hello_mlir__parser__tests__parse_complex_expression.snap
---
source: src/parser.rs
expression: program
---
stmts:
  - Expr:
      expr:
        BinOp:
          lhs:
            BinOp:
              lhs:
                IntLit:
                  value: 42
                  span:
                    start: 0
                    end: 2
                    context: ~
              op: Add
              rhs:
                BinOp:
                  lhs:
                    IntLit:
                      value: 10
                      span:
                        start: 6
                        end: 8
                        context: ~
                  op: Mul
                  rhs:
                    IntLit:
                      value: 5
                      span:
                        start: 11
                        end: 12
                        context: ~
                  span:
                    start: 6
                    end: 12
                    context: ~
              span:
                start: 0
                end: 13
                context: ~
          op: Sub
          rhs:
            IntLit:
              value: 8
              span:
                start: 16
                end: 17
                context: ~
          span:
            start: 0
            end: 17
            context: ~
      span:
        start: 0
        end: 17
        context: ~
