src/snapshots/hello_mlir__parser__tests__parse_float_literal.snap
---
source: src/parser.rs
expression: program
---
functions:
  - name: test
    params: []
    type: F32
    body:
      - Expr:
          expr:
            FloatLit:
              value: "3.14"
              span:
                start: 19
                end: 23
                context: ~
              type: ~
          span:
            start: 19
            end: 23
            context: ~
    span:
      start: 0
      end: 25
      context: ~
