src/snapshots/hello_mlir__parser__tests__parse_float_literal_with_zero.snap
---
source: src/parser.rs
expression: program
---
functions:
  - name: test
    params: []
    type: F32
    body:
      - Expr:
          expr:
            FloatLit:
              value: "0.0"
              span:
                start: 19
                end: 22
                context: ~
              type: ~
          span:
            start: 19
            end: 22
            context: ~
    span:
      start: 0
      end: 24
      context: ~
