src/snapshots/hello_mlir__parser__tests__parse_function_declaration.snap
---
source: src/parser.rs
expression: program
---
stmts:
  - FnDecl:
      name: zero
      params: []
      type: I32
      body:
        - Expr:
            expr:
              IntLit: 0
