src/snapshots/hello_mlir__parser__tests__parse_functions_with_comments_should_pass.snap
---
source: src/parser.rs
expression: program
---
functions:
  - name: zero
    params: []
    type: I32
    body:
      - Expr:
          expr:
            IntLit:
              value: "0"
              span:
                start: 37
                end: 38
                context: ~
              type: ~
          span:
            start: 37
            end: 38
            context: ~
    span:
      start: 18
      end: 40
      context: ~
  - name: one
    params: []
    type: I32
    body:
      - Expr:
          expr:
            IntLit:
              value: "1"
              span:
                start: 116
                end: 117
                context: ~
              type: ~
          span:
            start: 116
            end: 117
            context: ~
    span:
      start: 62
      end: 120
      context: ~
