src/snapshots/hello_mlir__parser__tests__parse_if_expression.snap
---
source: src/parser.rs
expression: program
---
functions:
  - name: test
    params: []
    type: I32
    body:
      - Expr:
          expr:
            If:
              condition:
                BoolLit:
                  value: true
                  span:
                    start: 22
                    end: 26
                    context: ~
              then_branch:
                IntLit:
                  value: "42"
                  span:
                    start: 29
                    end: 31
                    context: ~
                  type: ~
              else_branch:
                IntLit:
                  value: "0"
                  span:
                    start: 41
                    end: 42
                    context: ~
                  type: ~
              type: ~
              span:
                start: 19
                end: 44
                context: ~
          span:
            start: 19
            end: 44
            context: ~
    span:
      start: 0
      end: 46
      context: ~
